--- a/frontend/src/pages/HomeLogged/HomeLogged.scss
+++ b/frontend/src/pages/HomeLogged/HomeLogged.scss
@@ -27,10 +27,9 @@
 
             .latestAnnouncements_wrapper {
                 width: 100%;
-                display: flex;
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
                 gap:1rem;
-                overflow-x: scroll;
-                padding-bottom: 1rem;
             }
         }
     }
